BugFix: Fixing layout issues with older implementations of CSS-Grid

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -19,7 +19,7 @@
   }
 
   .projects {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, auto);
   }
 
   .title-box {
@@ -77,6 +77,7 @@
 @include mediaMd {
   .main-grid {
     grid-template-rows: auto 1fr 0px;
+    grid-template-columns: 1fr;
   }
 
   main {
@@ -157,7 +158,7 @@
   }
 
   .projects {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, auto);
   }
 
   #main-footer {
@@ -174,6 +175,7 @@
 
   .main-grid {
     grid-template-rows: auto 1fr 0px;
+    grid-template-columns: 1fr;
   }
 
   main {
